--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -32,7 +32,7 @@
                 <div class="sidebar-header">
                     <div class="d-flex justify-content-between">
                         <div class="logo">
-                            <a href="index.html"><img src="~/Content/images/tabanghub3-removebg-preview.png" style="height: 50px;" alt="Logo" srcset="">TabangHub</a>
+                            <a href="~/Organization/Index"><img src="~/Content/images/tabanghub3-removebg-preview.png" style="height: 50px;" alt="Logo" srcset="">TabangHub</a>
                         </div>
                         <div class="toggler">
                             <a href="#" class="sidebar-hide d-xl-none d-block"><i class="bi bi-x bi-middle"></i></a>
@@ -134,16 +134,6 @@
                                     <li>
                                         <a class="dropdown-item" href="~/Organization/OrgProfile">
                                             <i class="icon-mid bi bi-person me-2"></i> My Profile
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="#">
-                                            <i class="icon-mid bi bi-gear me-2"></i> Settings
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="#">
-                                            <i class="icon-mid bi bi-wallet me-2"></i> Wallet
                                         </a>
                                     </li>
                                     <li>
